# polkadot-mcp

./: CLAUDE.md  Cargo.toml  LOOP_ORDER.md  README.md  SPECIFICATION.md  TOOLS.md
src/: decode.rs  integration_tests.rs  main.rs  network.rs  pool.rs  server.rs  signer.rs  types.rs
src/backends/: mod.rs  subscan.rs  subxt_backend.rs
src/tools/: account.rs  chain.rs  fellowship.rs  governance.rs  metadata.rs  mod.rs  ss58.rs  staking.rs
